# smartgraph

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_STYLE_GUIDLINES.md  CONTRIBUTING.md  LICENSE  README.md  checkpoints.json  pyproject.toml
.github/workflows/: publish.yml  publish_manualy.yml  python-publish.yml
checkpoints/: search_session.json
examples/: advanced_branching_assistant.py  automated-customer-support-ticket-router.py  code_introduction_search.py  code_quick_start.py  code_state_management.py  completion_pipeline_simple.py  complex_reactive_graph.py  conversation_with_memory.py  crm_example.py  data_input_handlers_example.py  duckduckgo_conversation_example.py  dynamic-sales-proposal-generator.py  example_completion_pipeline_simple.py  example_data_input_handlers.py  example_llm_completion.py  example_llm_completion_with_tool.py  example_multi_model_llm_completion.py  example_pipline_with_context.py  example_reacative_components.py  example_recative_components.py  hil_financial_transaction.py  hn_assistant.py  human_in_the_loop_smartgraph_example.py  interactive_story_collaborator.py  manual_test.py  persistent_conversation.py  reactive_conversation.py  reactive_conversation_with_tool.py  recative_ai_component.py  search_agent.py  search_api.py  search_assistant.md  search_assistant.py  simple_conversation.py  simple_qa_with_feedback.py  smart_qa_system.py  stateless_conversation.py  stateless_hn_assistant.py
smartgraph/: __init__.py  actors.py  assistant_conversation.py  base.py  checkpoint_manager.py  checkpointer.py  component.py  components.py  condition_evaluator.py  core.py  exceptions.py  graph.py  graph_utils.py  graph_visualizer.py  logging.py  memory.py  reducers.py  state_manager.py  task_executor.py  test_graph_visualizer.py  utils.py
smartgraph/components/: __init__.py  branching_component.py  completion_component.py  human_in_the_loop.py  input_handlers.py  processing.py
smartgraph/tools/: __init__.py  base_toolkit.py  duck_memory_toolkit.py  duckduckgo_search.py  duckduckgo_toolkit.py  memory_toolkit.py  memory_tools.py  tavily_toolkit.py  travily.py  weather_toolkit.py
tests/: conftest.py  test_base.py  test_checkpoint_manager.py  test_condition_evaluator.py  test_core.py  test_exceptions.py  test_graph_utils.py  test_reactive.py  test_reactive_component.py  test_reactive_conversation.py  test_search_assistant.py  test_state_manager.py  test_task_executor.py
tests/components/: test_completion_component.py  test_human_in_the_loop.py  test_input_handlers.py
tests/tools/: test_duckMemory_toolkit.py
